...
    },
    "common.done": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Done"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "完成"
          }
        }
      }
    },
    "processing.title": {
      "localizations": {
...
    },
    "archive.previewPDF": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "View PDF"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "查看 PDF"
          }
        }
      }
    },
    "archive.retry": {
      "localizations": {
...
    },
    "export.deleteConfirmAction": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Continue to Photos deletion confirmation"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "继续至系统照片删除确认"
...
